--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       "@context": "https://schema.org/",
       "@type": "Person",
       "name": "Seif Hossam",
-      "url": "https://seif-hossam.vercel.app/",
-      "image": "assets/images/profile.jpg",
+      "url": "https://seif-cyber.github.io/portfolio/",
+      "image": "https://seif-cyber.github.io/portfolio/assets/images/profile.jpg",
       "sameAs": [
         "https://github.com/seif-hossam",
         "https://www.linkedin.com/in/seif-hossam-3a2bb724b",
@@ -47,8 +47,8 @@
     <meta property="og:title" content="Seif Hossam | Full-Stack Developer Portfolio">
     <meta property="og:description"
         content="Discover modern web applications and technical expertise in React and Java.">
-    <meta property="og:image" content="assets/images/profile.jpg">
-    <meta property="og:url" content="https://seif-hossam.vercel.app/">
+    <meta property="og:image" content="https://seif-cyber.github.io/portfolio/assets/images/profile.jpg">
+    <meta property="og:url" content="https://seif-cyber.github.io/portfolio/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
 
