--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Official portfolio of Seif Hossam. A Full-Stack Developer specializing in React, Java, and C++. Explore scalable applications, technical skills, and software engineering projects.">
+        content="Official portfolio of Seif Hossam (Seif Khoz3a). A Full-Stack Developer specializing in React, Java, and C++. Explore scalable applications, technical skills, and software engineering projects.">
     <meta name="keywords"
-        content="Seif Hossam, Full-Stack Developer, React Developer, Java Developer, Software Engineer Portfolio, Web Development">
+        content="Seif Hossam, Seif Khoz3a, Khoz3a, Full-Stack Developer, React Developer, Java Developer, Software Engineer Portfolio, Web Development">
 
     <!-- Google Verification -->
     <meta name="google-site-verification" content="4gFrhPNAGSiaZAoGVPYX1cQ-fY3A2iVSO8Tg-_n9QdQ" />
@@ -27,6 +27,7 @@
       "@context": "https://schema.org/",
       "@type": "Person",
       "name": "Seif Hossam",
+      "alternateName": "Seif Khoz3a",
       "url": "https://seif-cyber.github.io/portfolio/",
       "image": "https://seif-cyber.github.io/portfolio/assets/images/profile.jpg",
       "sameAs": [
@@ -46,7 +47,7 @@
     <!-- Social Media Meta Tags (Open Graph / Twitter) -->
     <meta property="og:title" content="Seif Hossam | Full-Stack Developer Portfolio">
     <meta property="og:description"
-        content="Discover modern web applications and technical expertise in React and Java.">
+        content="Discover modern web applications and technical expertise in React and Java. Built by Seif Hossam (Seif Khoz3a).">
     <meta property="og:image" content="https://seif-cyber.github.io/portfolio/assets/images/profile.jpg">
     <meta property="og:url" content="https://seif-cyber.github.io/portfolio/">
     <meta property="og:type" content="website">
