--- a/index.html
+++ b/index.html
@@ -2,17 +2,29 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z4P0SPSK3F"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-Z4P0SPSK3F');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Official portfolio of Seif Hossam (Seif Khoz3a). A Full-Stack Developer specializing in React, Java, and C++. Explore scalable applications, technical skills, and software engineering projects.">
+        content="Official portfolio of SEIF HOSSAM (Seif Khoz3a) - Full Stack Developer & Software Engineer based in Egypt. Specializing in React, Java, C++, and scalable web architectures. سيف حسام مبرمج ومطور مواقع.">
     <meta name="keywords"
-        content="Seif Hossam, Seif Khoz3a, Khoz3a, Full-Stack Developer, React Developer, Java Developer, Software Engineer Portfolio, Web Development">
+        content="SEIF HOSSAM, Seif Khoz3a, Full Stack Developer, Software Engineer, Web Developer, React Developer, Java Developer, C++ Developer, SEIF HOSSAM Portfolio, Web Development Egypt, سيف حسام, سيف مبرمج, سيف مهندس برمجيات, سيف مطور ويب, تصميم مواقع مصر">
+    <meta name="author" content="SEIF HOSSAM">
+    <meta name="robots" content="index, follow">
 
     <!-- Google Verification -->
     <meta name="google-site-verification" content="4gFrhPNAGSiaZAoGVPYX1cQ-fY3A2iVSO8Tg-_n9QdQ" />
 
-    <title>SEIF HOSSAM | Full-Stack Developer & Cybernetic Architect</title>
+    <title>SEIF HOSSAM | Full Stack Developer & Software Engineer Portfolio</title>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
@@ -26,32 +38,50 @@
     {
       "@context": "https://schema.org/",
       "@type": "Person",
-      "name": "Seif Hossam",
-      "alternateName": "Seif Khoz3a",
-      "url": "https://seif-cyber.github.io/portfolio/",
-      "image": "https://seif-cyber.github.io/portfolio/assets/images/profile.jpg",
+      "name": "SEIF HOSSAM",
+      "alternateName": ["Seif Khoz3a", "Seif El-Deen Hossam", "سيف حسام"],
+      "url": "https://www.seifhossam.com/",
+      "image": "https://www.seifhossam.com/assets/images/profile.jpg",
+      "jobTitle": "Full Stack Developer",
+      "description": "SEIF HOSSAM is a Full Stack Developer and Software Engineer specializing in building scalable web applications using React, Java, and C++.",
+      "nationality": {
+        "@type": "Country",
+        "name": "Egypt"
+      },
       "sameAs": [
         "https://github.com/seif-hossam",
         "https://www.linkedin.com/in/seif-hossam-3a2bb724b",
-        "https://www.facebook.com/sif.hosam.7"
+        "https://www.facebook.com/sif.hosam.7",
+        "https://twitter.com/seif_khoz3a" 
       ],
       "jobTitle": "Full-Stack Developer",
       "worksFor": {
         "@type": "Organization",
         "name": "Freelance"
       },  
-      "knowsAbout": ["React.js", "Java", "C++", "Full-Stack Development", "System Analysis"]
+      "knowsAbout": ["React.js", "Java", "C++", "Full-Stack Development", "System Analysis", "SEO", "Software Engineering"]
     }
     </script>
 
     <!-- Social Media Meta Tags (Open Graph / Twitter) -->
-    <meta property="og:title" content="Seif Hossam | Full-Stack Developer Portfolio">
+    <meta property="og:site_name" content="SEIF HOSSAM Portfolio">
+    <meta property="og:title" content="SEIF HOSSAM | Full Stack Developer & Software Engineer">
     <meta property="og:description"
-        content="Discover modern web applications and technical expertise in React and Java. Built by Seif Hossam (Seif Khoz3a).">
-    <meta property="og:image" content="https://seif-cyber.github.io/portfolio/assets/images/profile.jpg">
-    <meta property="og:url" content="https://seif-cyber.github.io/portfolio/">
-    <meta property="og:type" content="website">
+        content="Explore the portfolio of SEIF HOSSAM (Seif Khoz3a), a skilled Full Stack Developer and Software Engineer. View projects, skills, and contact information.">
+    <meta property="og:image" content="https://www.seifhossam.com/assets/images/profile.jpg">
+    <meta property="og:url" content="https://www.seifhossam.com/">
+    <meta property="og:type" content="profile">
+    <meta property="profile:first_name" content="Seif">
+    <meta property="profile:last_name" content="Hossam">
+    <meta property="profile:username" content="seif_khoz3a">
+
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="SEIF HOSSAM | Full Stack Developer & Software Engineer">
+    <meta name="twitter:description"
+        content="Official portfolio of SEIF HOSSAM. Expert in Full Stack Web Development, scalable apps, and software architecture.">
+    <meta name="twitter:image" content="https://www.seifhossam.com/assets/images/profile.jpg">
+    <meta name="twitter:creator" content="@seif_khoz3a">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -97,10 +127,11 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h3 class="slide-in-left">Full-Stack Developer</h3>
-                <h1 class="slide-in-left delay-100">Hi, I'm Seif Hossam</h1>
+                <h3 class="slide-in-left">Full Stack Developer & Software Engineer</h3>
+                <h1 class="slide-in-left delay-100">Hi, I'm SEIF HOSSAM</h1>
                 <p class="fade-up delay-200">
-                    A driven Computer Science Student and Junior Developer skilled in React, Java, and C++.
+                    A driven <strong>Computer Science Student</strong> and <strong>Software Engineer</strong> skilled in
+                    React, Java, and C++.
                     I specialize in building scalable, production-ready applications with clean code and modern
                     architecture.
                 </p>
@@ -112,14 +143,14 @@
         </div>
 
         <div class="hero-img">
-            <img src="assets/images/profile.jpg" alt="Seif Hossam - Full Stack Developer">
+            <img src="assets/images/profile.jpg" alt="SEIF HOSSAM - Full Stack Developer">
         </div>
     </section>
 
 
 
     <section class="section" id="skills">
-        <h2 class="section-title fade-up">Technical <span>Skills</span></h2>
+        <h2 class="section-title fade-up">Technical <span>Skills & Technologies</span></h2>
 
         <div class="tabs-container fade-up delay-200">
             <div class="tabs-controls">
@@ -216,7 +247,7 @@
     </section>
 
     <section class="section" id="projects">
-        <h2 class="section-title fade-up">Featured <span>Projects</span></h2>
+        <h2 class="section-title fade-up">Featured <span>Software Projects</span></h2>
         <div class="projects-grid">
             <!-- Project 1 -->
             <div class="project-card slide-in-left delay-100">
@@ -244,7 +275,8 @@
             <!-- Project 2 -->
             <div class="project-card zoom-in delay-300">
                 <div class="project-header">
-                    <img src="https://farida-eg.com/pics/logo.png" alt="Farida Logo" class="farida-logo"
+                    <img src="https://farida-eg.com/pics/logo.png"
+                        alt="Farida Marketing Agency Logo - Web Development Project by SEIF HOSSAM" class="farida-logo"
                         style="width: 45px; height: auto;">
                     <div class="project-links">
                         <a href="https://farida-eg.com/" target="_blank" rel="noopener noreferrer"
@@ -294,7 +326,7 @@
 
     <!-- --- Soft Skills Section --- -->
     <section class="section" id="soft-skills">
-        <h2 class="section-title fade-up">Soft <span>Skills</span></h2>
+        <h2 class="section-title fade-up">Professional <span>Soft Skills</span></h2>
 
         <div class="skills-grid-detailed">
             <!-- Problem Solving -->
@@ -406,7 +438,7 @@
                 title="LinkedIn">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="https://github.com" target="_blank" rel="noopener noreferrer" title="GitHub">
+            <a href="https://github.com/seif-hossam" target="_blank" rel="noopener noreferrer" title="GitHub">
                 <i class="fa-brands fa-github"></i>
             </a>
             <a href="https://www.facebook.com/sif.hosam.7" target="_blank" rel="noopener noreferrer" title="Facebook">
@@ -414,7 +446,7 @@
             </a>
         </div>
 
-        <p style="margin-top: 30px; font-size: 0.8rem; opacity: 0.5;">© 2026 Seif Hossam. All rights reserved.</p>
+        <p style="margin-top: 30px; font-size: 0.8rem; opacity: 0.5;">© 2026 SEIF HOSSAM. All rights reserved.</p>
     </footer>
 
     <!-- Libraries -->
