--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <meta name="google-site-verification" content="4gFrhPNAGSiaZAoGVPYX1cQ-fY3A2iVSO8Tg-_n9QdQ" />
 
     <title>SEIF HOSSAM | Full Stack Developer & Software Engineer Portfolio</title>
+    <link rel="canonical" href="https://seifhossam.com/">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
@@ -40,8 +41,8 @@
       "@type": "Person",
       "name": "SEIF HOSSAM",
       "alternateName": ["Seif Khoz3a", "Seif El-Deen Hossam", "سيف حسام"],
-      "url": "https://www.seifhossam.com/",
-      "image": "https://www.seifhossam.com/assets/images/profile.jpg",
+      "url": "https://seifhossam.com/",
+      "image": "https://seifhossam.com/assets/images/profile.jpg",
       "jobTitle": "Full Stack Developer",
       "description": "SEIF HOSSAM is a Full Stack Developer and Software Engineer specializing in building scalable web applications using React, Java, and C++.",
       "nationality": {
@@ -68,8 +69,8 @@
     <meta property="og:title" content="SEIF HOSSAM | Full Stack Developer & Software Engineer">
     <meta property="og:description"
         content="Explore the portfolio of SEIF HOSSAM (Seif Khoz3a), a skilled Full Stack Developer and Software Engineer. View projects, skills, and contact information.">
-    <meta property="og:image" content="https://www.seifhossam.com/assets/images/profile.jpg">
-    <meta property="og:url" content="https://www.seifhossam.com/">
+    <meta property="og:image" content="https://seifhossam.com/assets/images/profile.jpg">
+    <meta property="og:url" content="https://seifhossam.com/">
     <meta property="og:type" content="profile">
     <meta property="profile:first_name" content="Seif">
     <meta property="profile:last_name" content="Hossam">
@@ -80,7 +81,7 @@
     <meta name="twitter:title" content="SEIF HOSSAM | Full Stack Developer & Software Engineer">
     <meta name="twitter:description"
         content="Official portfolio of SEIF HOSSAM. Expert in Full Stack Web Development, scalable apps, and software architecture.">
-    <meta name="twitter:image" content="https://www.seifhossam.com/assets/images/profile.jpg">
+    <meta name="twitter:image" content="https://seifhossam.com/assets/images/profile.jpg">
     <meta name="twitter:creator" content="@seif_khoz3a">
 
     <!-- Fonts -->
