--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
         "name": "Egypt"
       },
       "sameAs": [
-        "https://github.com/seif-hossam",
         "https://www.linkedin.com/in/seif-hossam-3a2bb724b",
         "https://www.facebook.com/sif.hosam.7",
         "https://twitter.com/seif_khoz3a" 
       ],
-      "jobTitle": "Full-Stack Developer",
+      "jobTitle": "Full Stack Developer",
       "worksFor": {
         "@type": "Organization",
         "name": "Freelance"
@@ -465,5 +464,6 @@
 
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
