--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       "alternateName": ["Seif Khoz3a", "Seif El-Deen Hossam", "سيف حسام"],
       "url": "https://seifhossam.com/",
       "image": "https://seifhossam.com/assets/images/profile.jpg",
-      "jobTitle": "Full Stack Developer",
+      "jobTitle": "Full-Stack Developer",
       "description": "SEIF HOSSAM is a Full Stack Developer and Software Engineer specializing in building scalable web applications using React, Java, and C++.",
       "nationality": {
         "@type": "Country",
@@ -54,7 +54,6 @@
         "https://www.facebook.com/sif.hosam.7",
         "https://twitter.com/seif_khoz3a" 
       ],
-      "jobTitle": "Full Stack Developer",
       "worksFor": {
         "@type": "Organization",
         "name": "Freelance"
@@ -467,3 +466,4 @@
 
 
 </html>
+
