--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       "sameAs": [
         "https://www.linkedin.com/in/seif-hossam-3a2bb724b",
         "https://www.facebook.com/sif.hosam.7",
-        "https://twitter.com/seif_khoz3a" 
+        "https://x.com/hosam_sif?s=21" 
       ],
       "worksFor": {
         "@type": "Organization",
@@ -61,9 +61,20 @@
       "knowsAbout": ["React.js", "Java", "C++", "Full-Stack Development", "System Analysis", "SEO", "Software Engineering"]
     }
     </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "WebSite",
+      "name": "SEIF HOSSAM",
+      "url": "https://seifhossam.com/",
+      "alternateName": ["SEIF HOSSAM Portfolio", "Seif Khoz3a Portfolio"]
+    }
+    </script>
 
     <!-- Social Media Meta Tags (Open Graph / Twitter) -->
-    <meta property="og:site_name" content="SEIF HOSSAM Portfolio">
+    <meta property="og:site_name" content="SEIF HOSSAM">
+    <meta name="application-name" content="SEIF HOSSAM">
+    <meta name="apple-mobile-web-app-title" content="SEIF HOSSAM">
     <meta property="og:title" content="SEIF HOSSAM | Full Stack Developer & Software Engineer">
     <meta property="og:description"
         content="Explore the portfolio of SEIF HOSSAM (Seif Khoz3a), a skilled Full Stack Developer and Software Engineer. View projects, skills, and contact information.">
@@ -72,7 +83,9 @@
     <meta property="og:type" content="profile">
     <meta property="profile:first_name" content="Seif">
     <meta property="profile:last_name" content="Hossam">
-    <meta property="profile:username" content="seif_khoz3a">
+    <meta property="profile:username" content="hosam_sif">
+    <meta property="og:see_also" content="https://www.linkedin.com/in/seif-hossam-3a2bb724b">
+    <meta property="og:see_also" content="https://github.com/seif-cyber/">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -80,7 +93,7 @@
     <meta name="twitter:description"
         content="Official portfolio of SEIF HOSSAM. Expert in Full Stack Web Development, scalable apps, and software architecture.">
     <meta name="twitter:image" content="https://seifhossam.com/assets/images/profile.jpg">
-    <meta name="twitter:creator" content="@seif_khoz3a">
+    <meta name="twitter:creator" content="@hosam_sif">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -437,7 +450,7 @@
                 title="LinkedIn">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="https://github.com/seif-hossam" target="_blank" rel="noopener noreferrer" title="GitHub">
+            <a href="https://github.com/seif-cyber/" target="_blank" rel="noopener noreferrer" title="GitHub">
                 <i class="fa-brands fa-github"></i>
             </a>
             <a href="https://www.facebook.com/sif.hosam.7" target="_blank" rel="noopener noreferrer" title="Facebook">
@@ -464,6 +477,4 @@
     <script src="js/main.js"></script>
 </body>
 
-
 </html>
-
