--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Official portfolio of SEIF HOSSAM (Seif Khoz3a) - Full Stack Developer & Software Engineer based in Egypt. Specializing in React, Java, C++, and scalable web architectures. سيف حسام مبرمج ومطور مواقع.">
+        content="SEIF HOSSAM (Seif Khoz3a) - Full Stack Developer & Software Engineer in Egypt. React, Java, C++, scalable architectures. سيف حسام مبرمج ومطور مواقع.">
     <meta name="keywords"
         content="SEIF HOSSAM, Seif Khoz3a, Full Stack Developer, Software Engineer, Web Developer, React Developer, Java Developer, C++ Developer, SEIF HOSSAM Portfolio, Web Development Egypt, سيف حسام, سيف مبرمج, سيف مهندس برمجيات, سيف مطور ويب, تصميم مواقع مصر">
     <meta name="author" content="SEIF HOSSAM">
