--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/main.css">
 
+    <noscript>
+        <style>
+            .fade-up,
+            .zoom-in,
+            .slide-in-left,
+            .slide-in-right,
+            .fade-in {
+                opacity: 1 !important;
+                transform: none !important;
+            }
+        </style>
+    </noscript>
 </head>
 
 <body>
