--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         "name": "Egypt"
       },
       "sameAs": [
-        "https://www.linkedin.com/in/seif-hossam-full-stack/",
+        "https://www.linkedin.com/in/seifhossam-fullstack/",
         "https://www.facebook.com/sif.hosam.7",
         "https://x.com/hosam_sif?s=21" 
       ],
@@ -84,7 +84,7 @@
     <meta property="profile:first_name" content="Seif">
     <meta property="profile:last_name" content="Hossam">
     <meta property="profile:username" content="hosam_sif">
-    <meta property="og:see_also" content="https://www.linkedin.com/in/seif-hossam-full-stack/">
+    <meta property="og:see_also" content="https://www.linkedin.com/in/seifhossam-fullstack/">
     <meta property="og:see_also" content="https://github.com/seif-cyber/">
 
     <!-- Twitter Card -->
@@ -457,16 +457,8 @@
             <a href="mailto:sifhosam67@gmail.com" class="btn">Say Hello</a>
         </div>
 
-        <!-- LinkedIn Badge -->
-        <div style="margin-bottom: 30px; display: flex; justify-content: center;">
-            <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark"
-                data-type="HORIZONTAL" data-vanity="seifhossam-fullstack" data-version="v1"><a
-                    class="badge-base__link LI-simple-link"
-                    href="https://eg.linkedin.com/in/seifhossam-fullstack?trk=profile-badge">SEIF HOSSAM</a></div>
-        </div>
-
         <div class="social-links">
-            <a href="https://www.linkedin.com/in/seif-hossam-full-stack/" target="_blank" rel="noopener noreferrer"
+            <a href="https://www.linkedin.com/in/seifhossam-fullstack/" target="_blank" rel="noopener noreferrer"
                 title="LinkedIn">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
@@ -475,6 +467,9 @@
             </a>
             <a href="https://www.facebook.com/sif.hosam.7" target="_blank" rel="noopener noreferrer" title="Facebook">
                 <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://x.com/hosam_sif" target="_blank" rel="noopener noreferrer" title="X">
+                <i class="fa-brands fa-x-twitter"></i>
             </a>
         </div>
 
@@ -485,7 +480,6 @@
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.8.0/vanilla-tilt.min.js"></script>
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 
     <!-- Floating Buttons -->
     <a href="https://wa.me/201090066885" target="_blank" class="float-btn whatsapp-btn" aria-label="WhatsApp">
